# SPARTA

./: .gitignore  DMmodif_export_test_ver.py  README.md  averaging_per_group.py  create_score_annot_depending_on_otus.py  main.py  pyproject.toml  requirements.txt  setup.py  sparta_main.sh
DeepMicro/: DMmodif_export_test_ver.py  test_set_measurement.py
IBD_runs/: Annotation_samples_separation_Iteration_0_run2.csv  IBD_runs.py  check_coress_labels_run2.xlsx  check_labels.R  compare_perfs.R  perf.csv  perf0.csv  perf1.csv  perf_analyzer.py  test_seeds.py
Inputs/: Label_abundance_Cirrhosis.csv  Label_abundance_Colorectal.csv  Label_abundance_Crohn.csv  Label_abundance_IBD.csv  Label_abundance_Obesity.csv  Label_abundance_T2D.csv  Label_abundance_WT2D.csv  Label_abundance_testing.csv  Label_abundance_tryout.csv  Test_sets_abundance_T2D.csv  Test_sets_abundance_WT2D.csv  abundance_Crohn.txt  abundance_testing.txt  abundance_tryout.txt
Post-processing/: compare_rf_signif_comparison_sick_ctrl.py  export_core_and_meta.py  generate_signif_data_table.py  generate_signif_data_table_otu.py  get_param_scores.py  get_param_scores_OTU.py  heatmap_generation.py  plot_otu_vs_sofa.py  plot_otu_vs_sofa_and_generate_core_meta_lists.py  rotor_cutoff.py
SPARTA/: DMmodif_export_test_ver.py  Deepmicro.py  __main__.py  classification.py  classification_BACKUP_1591.py  classification_LOCAL_1591.py  cli.py  create_core_meta.py  esmecata.py  iteration.py  sparta_classification.py  visualize.py
SPARTA.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SoFA_calculation/: create_score_annot_depending_on_otus.py  data_formatting_OTUrename.py  deep_micro_subset_separation.py  extract_test_indices.py  relative_transform.py  tf_igm_v2.py
article_data/: README.md
old/: DMmodif_export_test_ver.py  __main__.py
sparta_pipeline/: Deepmicro.py  __main__.py  classification.py  create_core_meta.py  esmecata.py  iteration.py  utils.py  visualize.py
tests/: SoFA_table.csv  test_cli.py  test_esmecata.py  test_functional_occurrence.tsv  test_iter_selection.py  test_seeds.py  (+2 more)
(+1793 files in other folders)
